# typing-ex

./: .coveragerc  .gitignore  LICENSE  README.md  coverage.json  coverage.sh  coverage.xml  pyproject.toml  pytest.ini  test.sh
docs/: EnumEx.md  TypeInfo.md  TypedDefaultDict.md
src/tests/: test_enum_ex.py  test_type_info.py
src/typing_ex/: __init__.py  builtin_typing.py  enum_ex.py  type_info.py  typed_defaultdict.py
tests/: test_enum_ex.py  test_frozen.py  test_type_info.py  test_typed_defaultdict.py
typing_ex/: builtin_typing.py  enum_ex.py  experimental.py  frozen.py  type_info.py  typed_defaultdict.py
