[project]
name = "typing_ex"
version = "0.1.2"
description = "A package for extended built-in types"
authors = [{ name = "yusing", email = "yusing.wys@gmail.com" }]
dependencies = ["typing-extensions>=4.9.0"]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "isort>=5.13.2",
    "black>=24.2.0",
    "flakehell>=0.9.0",
    "flake8-bugbear>=23.3.12",
    "flake8-mypy>=17.8.0",
    "flake8-builtins>=2.2.0",
    "coverage>=7.4.1",
    "mypy>=1.8.0",
]
test = ["pytest>=8.0.1"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
